add 2 bd and config
